fixed the left alignment of the master slider and the ribbons

--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -57,6 +57,10 @@ controller_div div {
 	display: table-cell;
 }
 
+.sourceLabel {
+	margin-right: 3px;
+}
+
 #masterSlider {
 	margin-left: 35px;
 	float: left;
